kubernetes/config-from-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
spec:
  template:
    spec:
      containers:
        - name: seafile
