kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: seahub
      name: seahub
    - protocol: TCP
      port: 8082
      targetPort: seafile
      name: seafile
  selector:
    seafile: seafile
