kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: seafile
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: seafile
          servicePort: http
